--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="./vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
-  <link rel="stylesheet" href="style.css">
-  <title>midutimes 📆</title>
+  <link rel="stylesheet" href="./style.css">
+  <title>Change Times 📆</title>
 </head>
 
 <body class="toast">
@@ -34,8 +34,8 @@
     </div>
 
   </main>
-  <script type="module" src="/main.js"></script>
-  <script type="module" src="/multilanguage.js"></script>
+  <script type="module" src="./main.js"></script>
+  <script type="module" src="./multilanguage.js"></script>
 </body>
 
 </html>
